# megalib

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeOptions.txt  Doxyfile
cmake/: Deps.cmake
examples/: CMakeLists.txt  argvparse.c  log.c  logger.c  vector.c  window.c
megalib/: log.h  pthread_impl.h  window.h
src/megalib/: argvparse.h  megalib.h
src/megalib/argvparse/: argvparse.c  argvparse.h
src/megalib/datastructures/: vector.c  vector.h
src/megalib/logging/: log.c  log.h  logger.c  logger.h
src/megalib/os/opengl/: opengl.h
src/megalib/os/opengl/glad/: gl.h  wgl.h
src/megalib/os/opengl/impl/: opengl_win32.c
src/megalib/os/thread/: thread.h
src/megalib/os/window/: window.h
src/megalib/os/window/impl/: win32_window.c
src/megalib/thread/: thread.h
